objects/SDO_Community_Training_Course__c.object
<CustomObject>
    <description>What: A training course that can be taken by employees, customers, and partners. Represents how a typical Learning Management System (LMS) would integrate with Salesforce. Used heavily with Salesforce CMS in a community.</description>
    <fields>
        <fullName>Available_for_Registration__c</fullName>
        <formula>ISPICKVAL(Course_Status__c, &apos;Available for Registration&apos;) &amp;&amp;  Starts__c &gt;= NOW()</formula>
        <inlineHelpText>Indicates whether a course can be registered for. Shows TRUE if the status is &apos;Available for Registration&apos; and the course starts in the future.</inlineHelpText>
        <label>Available for Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Curriculum__c</fullName>
        <inlineHelpText>Detailed curriculum for this course.</inlineHelpText>
        <label>Course Curriculum</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Course_Flag__c</fullName>
        <inlineHelpText>Gives a way to flag a particular course in course listings.</inlineHelpText>
        <label>Course Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SDO_Community_CMS_Flags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Format__c</fullName>
        <inlineHelpText>Format of the training course: Online, in person, etc.</inlineHelpText>
        <label>Course Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Image__c</fullName>
        <inlineHelpText>URL to an image representing this course. Will be used on pages in Lightning Community and Salesforce CMS.</inlineHelpText>
        <label>Course Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Course_Status__c</fullName>
        <inlineHelpText>Course status. Only courses that are Available for Registration should appear to end users.</inlineHelpText>
        <label>Course Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Available for Registration</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Priority__c</fullName>
        <inlineHelpText>Can be used with Salesforce CMS and other ways to do course listings to control the order of display of this course in relation to others.</inlineHelpText>
        <label>Display Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <inlineHelpText>A brief description of the course.</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Starts__c</fullName>
        <defaultValue>NOW() + 5</defaultValue>
        <inlineHelpText>Start date &amp; time for the course.</inlineHelpText>
        <label>Starts</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Completed__c</fullName>
        <inlineHelpText>Total number of people who have completed this course.</inlineHelpText>
        <label>Total Completed</label>
        <summaryFilterItems>
            <field>SDO_Community_Course_Enrollment__c.Enrollment_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>SDO_Community_Course_Enrollment__c.Training_Course__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Enrolled__c</fullName>
        <inlineHelpText>Number of people enrolled in this course.</inlineHelpText>
        <label>Total Enrolled</label>
        <summaryFilterItems>
            <field>SDO_Community_Course_Enrollment__c.Enrollment_Status__c</field>
            <operation>equals</operation>
            <value>Assigned, Enrolled</value>
        </summaryFilterItems>
        <summaryForeignKey>SDO_Community_Course_Enrollment__c.Training_Course__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Training Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course_Format__c</columns>
        <columns>Available_for_Registration__c</columns>
        <columns>Course_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Available_Courses</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Course_Image__c</columns>
        <columns>Course_Format__c</columns>
        <columns>Display_Priority__c</columns>
        <columns>Course_Flag__c</columns>
        <columns>Starts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_Status__c</field>
            <operation>equals</operation>
            <value>Available for Registration</value>
        </filters>
        <label>All Available Courses</label>
    </listViews>
    <listViews>
        <fullName>New_Courses</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Course_Image__c</columns>
        <columns>Course_Format__c</columns>
        <columns>Display_Priority__c</columns>
        <columns>Course_Flag__c</columns>
        <columns>Starts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_for_Registration__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Course_Flag__c</field>
            <operation>equals</operation>
            <value>New!</value>
        </filters>
        <label>New Courses</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>